--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  db:
+  dbg2:
     image: mysql:5.7
     volumes:
       - db_data:/var/lib/mysql
@@ -19,10 +19,10 @@ services:
       context: ./node-sample
       #dockerfile: ./node-sample/Dockerfile        
     depends_on:
-       - db
+       - dbg2
     restart: always
     environment:
-      DB_HOST: db:3306
+      DB_HOST: dbg2
       DB_USER: user
       DB_PASSWORD: password
 volumes:
